--- a/index.html
+++ b/index.html
@@ -250,15 +250,19 @@
 		}
 
 		$(window).scroll(function () { 
-  		if ($(window).scrollTop() > $('body').height() * 0.67) {
+  		if ($(window).scrollTop() > $('body').height() * 0.65) {
   			//When scrolling down
   			isScrolled=true;
   			$('#face').attr('id', 'facedown');
+  			$('#links').css("color", "white");
+  			$('#name').css("color", "white");
   			$('#linksdown').show();
   			$('#navbar').show();
-  		} else if ($(window).scrollTop() < $('body').height() * 0.67){
+  		} else if ($(window).scrollTop() < $('body').height() * 0.65){
   			//When scrolling back up
   			$('#facedown').attr('id', 'face');
+  			$('#links').css("color", "black");
+  			$('#name').css("color", "#212121");
   			$('#linksdown').hide();
   			$('#navbar').hide();
   			$('#facedown').css('transition', "all .5s");
