--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
 
 	a{
 		text-decoration: none;
+		color: #212121;
     text-transform: uppercase;
 	}
 	a:hover{
@@ -253,15 +254,15 @@
   			//When scrolling down
   			isScrolled=true;
   			$('#face').attr('id', 'facedown');
-  			$('#links').css("color", "white");
+  			$('a').css("color", "white");
   			$('#name').css("color", "white");
   			$('#linksdown').show();
   			$('#navbar').show();
   		} else if ($(window).scrollTop() < $('body').height() * 0.65){
   			//When scrolling back up
   			$('#facedown').attr('id', 'face');
-  			$('#links').css("color", "black");
-  			$('#name').css("color", "#212121");
+  			$('a').css("color", "#212121");
+  			$('#name').css("color", "black");
   			$('#linksdown').hide();
   			$('#navbar').hide();
   			$('#facedown').css('transition', "all .5s");
