--- a/projects/arroz-blanco/index.html
+++ b/projects/arroz-blanco/index.html
@@ -97,6 +97,9 @@
   #menubutton{
     display: none;
   }
+  h3{
+    font-weight: 400;
+  }
 
   @media (max-width: 700px){
     #menubutton{
@@ -135,6 +138,7 @@
         </div>
       </div>
 <div class="img-container">
+<h3>Arroz Blanco</h3>
 <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/arroz-blanco/arroz-logo.jpg">
 <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/arroz-blanco/arigatas.png">
 <img src="
