--- a/projects/arroz-blanco/index.html
+++ b/projects/arroz-blanco/index.html
@@ -139,6 +139,7 @@
       </div>
 <div class="img-container">
 <h3>Arroz Blanco</h3>
+<p>Last year, out of curiosity I decided to check out the book <a href="https://www.amazon.com/Launch-Kick-Ass-T-Shirt-Brand-Magazine/dp/B005KSRC44">Launch a Kickass T-Shirt Brand</a>. Inspired by other hispanic T-shirt brands like <a href="http://tripleta.com/">Tripleta</a> and <a href="https://www.facebook.com/mangobajito/">MangoBajito, I decided to give it a shot and that summer I set up a booth in Puerto Rico Comic Con selling t-shirts and stickers I designed. The product line consisted of 6 t-shirts and 3 stickers.</p>
 <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/arroz-blanco/arroz-logo.jpg">
 <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/arroz-blanco/arigatas.png">
 <img src="
@@ -149,6 +150,7 @@ https://s3-us-west-2.amazonaws.com/wip-bucket/github/arroz-blanco/pelao.png">
 https://s3-us-west-2.amazonaws.com/wip-bucket/github/arroz-blanco/gameboy.png">
 <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/arroz-blanco/pelear.png">
 <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/arroz-blanco/hiragana.png">
+<p>The designs were inspired by a mix of Puerto Rican and Japanese culture, hence the name Arroz Blanco&mdash;since both Japanese and Puerto Rican cuisine have a heavy emphasis on white rice. I also set up a basic website and social media campaign promoting the products.</p>
 <img src="
 https://s3-us-west-2.amazonaws.com/wip-bucket/github/arroz-blanco/pique-sticker.jpg">
 <img src="
@@ -159,6 +161,7 @@ https://s3-us-west-2.amazonaws.com/wip-bucket/github/arroz-blanco/pistola-sticke
 <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/arroz-blanco/arroz-bizcard2.png">
 <img src="
 https://s3-us-west-2.amazonaws.com/wip-bucket/github/arroz-blanco/arroz-postcard.png">
+<p>The booth was successful, with over 150 shirts sold and lots of buzz from locals.</p>
 <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/arroz-blanco/sticker.jpg">
 <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/arroz-blanco/booth.jpg">
 </div>
