--- a/projects/arroz-blanco/index.html
+++ b/projects/arroz-blanco/index.html
@@ -139,7 +139,7 @@
       </div>
 <div class="img-container">
 <h3>Arroz Blanco</h3>
-<p>Last year, out of curiosity I decided to check out the book <a href="https://www.amazon.com/Launch-Kick-Ass-T-Shirt-Brand-Magazine/dp/B005KSRC44">Launch a Kickass T-Shirt Brand</a>. Inspired by other hispanic T-shirt brands like <a href="http://tripleta.com/">Tripleta</a> and <a href="https://www.facebook.com/mangobajito/">MangoBajito, I decided to give it a shot and that summer I set up a booth in Puerto Rico Comic Con selling t-shirts and stickers I designed. The product line consisted of 6 t-shirts and 3 stickers.</p>
+<p>Last year, out of curiosity I decided to check out the book <a href="https://www.amazon.com/Launch-Kick-Ass-T-Shirt-Brand-Magazine/dp/B005KSRC44">Launch a Kickass T-Shirt Brand</a>. Inspired by other hispanic T-shirt brands like <a href="http://tripleta.com/">Tripleta</a> and <a href="https://www.facebook.com/mangobajito/">MangoBajito</a>, I decided to give it a shot and that summer I set up a booth in Puerto Rico Comic Con selling t-shirts and stickers I designed. The product line consisted of 6 t-shirts and 3 stickers.</p>
 <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/arroz-blanco/arroz-logo.jpg">
 <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/arroz-blanco/arigatas.png">
 <img src="
