--- a/index.html
+++ b/index.html
@@ -181,6 +181,11 @@
 		display: none;
 	}
 
+	h5{
+		font-weight: 100;
+		font-size: 0.7em;
+	}
+
 	@media (max-width: 700px){
 		#scroll-down{
 			left: auto;
@@ -237,6 +242,10 @@
 		<p><a class="contentlinks" href="http://albertogui.com/projects/divpixels/">divPixels</a>&mdash;A free to use, browser-based pixel art tool for quickly developing pixel drawings.</p>
 		<p><a class="contentlinks" href="http://albertogui.com/projects/whitewithred/">White with Red</a>&mdash;A series of illustrations and web animations based on the short horror story of the same name.</p>
 		<p><a class="contentlinks" href="http://albertogui.com/projects/arroz-blanco/">Arroz Blanco</a>&mdash;A t-shirt and sticker line I developed and sold in Puerto Rico Comic Con. The brand is a blend of otaku and Puerto Rican culture.</p>
+
+		<hr>
+
+		<h5>Designed and coded by Alberto G. de la Cruz</h5>
 
 	</div>
 
