--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
       </div>
       <!-- ____________________ -->
 
-      <a href=" "><p id="scroll-down">&darr;</p></a>
+      <p id="scroll-down">&darr;</p>
 	</div>
 	<div id="content">
 		<p>Hello! I'm a designer and web developer from Puerto Rico now living in NYC. I've worked on design at places like <a class="contentlinks" href="http://artbinder.com">ArtBinder</a> and <a class="contentlinks" href="http://aliceapp.com">Alice</a>, and have recently launched an <a class="contentlinks" href="http://playarithmatic.com">app of my own</a>. I am skilled in UI/UX design, graphic design, illustration and front-end development. Outside of work I like comics, video games and good beer. <a class="contentlinks" href="mailto:agdelax@gmail.com">Hit me up</a> if you ever need a designer.</p>
