--- a/projects/artbinder-personas/index.html
+++ b/projects/artbinder-personas/index.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <head>
-<title>Arroz Blanco</title>
+<title>ArtBinder Personas</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="https://s3-us-west-2.amazonaws.com/wip-bucket/github/favicon.ico" />
   <link href='https://fonts.googleapis.com/css?family=Roboto+Slab' rel='stylesheet' type='text/css'>
@@ -24,7 +24,7 @@
   }
     .img-container{
       position: relative;
-      max-width: 500px;
+      max-width: 800px;
       margin: auto;
       font-size: 1.5em;
       padding: 0 15px 30px 15px;
@@ -138,31 +138,32 @@
         </div>
       </div>
 <div class="img-container">
-<h3>Arroz Blanco</h3>
-<p>Last year, out of curiosity I decided to check out the book <a class="contentlinks" href="https://www.amazon.com/Launch-Kick-Ass-T-Shirt-Brand-Magazine/dp/B005KSRC44">Launch a Kickass T-Shirt Brand</a>. Inspired by other hispanic T-shirt brands like <a class="contentlinks" href="http://tripleta.com/">Tripleta</a> and <a class="contentlinks" href="https://www.facebook.com/mangobajito/">MangoBajito</a>, I decided to give it a shot and that summer I set up a booth in Puerto Rico Comic Con selling t-shirts and stickers I designed. The product line consisted of 6 t-shirts and 3 stickers.</p>
-<img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/arroz-blanco/arroz-logo.jpg">
-<img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/arroz-blanco/arigatas.png">
+<h3>ArtBinder Personas</h3>
+<p>At ArtBinder, we had a range of applications that ranged from consumer facing to enterprise B2B solutions that all utilized their own independent systems. The project I was tasked with was identifying, interviewing and synthesizing all the key users for this range of applications in preparation of the launch of the new version of their CRM, one that uses the same backend system across all products.</p>
+
+<p>Working with the sales and customer success teams as well as users, I found that the user that actually makes the financial decision to purchase the product is not the user that actively uses the products on their day-to-day workflow. With that information I developed a tiered system for the Personas.</p>
+<ul>
+  <li>Customer Persona&mdash;Unlikely to use the application but still makes the final decision on whether or not to purchase the product.</li>
+  <li>Primary Persona&mdash;The main type of user, using our products on a daily basis.</li>
+  <li>Served Persona&mdash;The typical recipient of the product's services, specifically the customer.</li>
+</ul>
+<p>With this system we can identify the types of shareholders and engage them throughout the product lifecycle.</p>
+<img src="  
+https://s3-us-west-2.amazonaws.com/wip-bucket/github/ArtBinder/large-dealer.jpg" style="border: 1px solid #d3d3d3">
+<img src="  
+https://s3-us-west-2.amazonaws.com/wip-bucket/github/ArtBinder/art-collector.jpg" style="border: 1px solid #d3d3d3">
 <img src="
-https://s3-us-west-2.amazonaws.com/wip-bucket/github/arroz-blanco/borders.png">
+https://s3-us-west-2.amazonaws.com/wip-bucket/github/ArtBinder/small-dealer.jpg">
+<img src="  
+https://s3-us-west-2.amazonaws.com/wip-bucket/github/ArtBinder/director.jpg">
 <img src="
-https://s3-us-west-2.amazonaws.com/wip-bucket/github/arroz-blanco/pelao.png">
+https://s3-us-west-2.amazonaws.com/wip-bucket/github/ArtBinder/assistant.jpg">
 <img src="
-https://s3-us-west-2.amazonaws.com/wip-bucket/github/arroz-blanco/gameboy.png">
-<img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/arroz-blanco/pelear.png">
-<img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/arroz-blanco/hiragana.png">
+https://s3-us-west-2.amazonaws.com/wip-bucket/github/ArtBinder/archivist.jpg">
 <img src="
-https://s3-us-west-2.amazonaws.com/wip-bucket/github/arroz-blanco/pique-sticker.jpg">
+https://s3-us-west-2.amazonaws.com/wip-bucket/github/ArtBinder/small-collector.jpg">
 <img src="
-https://s3-us-west-2.amazonaws.com/wip-bucket/github/arroz-blanco/banana-bros.jpg">
-<img src="
-https://s3-us-west-2.amazonaws.com/wip-bucket/github/arroz-blanco/pistola-sticker.jpg">
-<img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/arroz-blanco/arroz-bizcard1.png">
-<img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/arroz-blanco/arroz-bizcard2.png">
-<img src="
-https://s3-us-west-2.amazonaws.com/wip-bucket/github/arroz-blanco/arroz-postcard.png">
-<p>The designs were inspired by a mix of Puerto Rican and Japanese culture, hence the name Arroz Blanco&mdash;since both Japanese and Puerto Rican cuisine have a heavy emphasis on white rice. I also set up a basic website and social media campaign promoting the products.</p>
-<img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/arroz-blanco/sticker.jpg">
-<img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/arroz-blanco/booth.jpg">
+https://s3-us-west-2.amazonaws.com/wip-bucket/github/ArtBinder/artist.jpg">
 </div>
 
 <script type="text/javascript">
@@ -191,6 +192,7 @@ https://s3-us-west-2.amazonaws.com/wip-bucket/github/arroz-blanco/arroz-postcard
     });
 </script>
 </body>
+
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
