--- a/projects/alice-crm/index.html
+++ b/projects/alice-crm/index.html
@@ -153,7 +153,7 @@ https://s3-us-west-2.amazonaws.com/wip-bucket/github/alice-crm/vendor-crm-print.
 <p>The final step was developing a PDF layout that takes account of all the data available on the profile that can be printed or emailed to the hotel guest, along with navigation and additional comments by the concierge.</p>
 
 <img src="
-https://s3-us-west-2.amazonaws.com/wip-bucket/github/alice-crm/vendor-crm-pdf.png" style="border: 1px solid #d3d3d3">
+https://s3-us-west-2.amazonaws.com/wip-bucket/github/alice-crm/vendor-crm-pdf.png" style="border: 1px solid #d3d3d3;width:600px;">
 </div>
 
 <script type="text/javascript">
