--- a/index.html
+++ b/index.html
@@ -272,10 +272,12 @@
 				clicked=true;
 				$('.nav').css("display", "block");
 				$('#navbar').height("25.5em");
+				$('#menubutton').html('Close')
 			} else {
 				clicked=false;
 				$('.nav').hide();
 				$('#navbar').height("6.5em");
+				$('#menubutton').html('Menu')
 			}
 		}
 
