--- a/index.html
+++ b/index.html
@@ -273,11 +273,13 @@
 				$('.nav').css("display", "block");
 				$('#navbar').height("25.5em");
 				$('#menubutton').html('Close');
+				$('#menubutton').addClass('contentlinks');
 			} else {
 				clicked=false;
 				$('.nav').hide();
 				$('#navbar').height("6.5em");
 				$('#menubutton').html('Menu');
+				$('#menubutton').addClass('contentlinks');
 			}
 		}
 
