--- a/index.html
+++ b/index.html
@@ -272,14 +272,14 @@
 				clicked=true;
 				$('.nav').css("display", "block");
 				$('#navbar').height("25.5em");
-				$('#menubutton').html('Close');
-				$('#menubutton').addClass('contentlinks');
+				// $('#menubutton').html('Close');
+				// $('#menubutton').addClass('contentlinks');
 			} else {
 				clicked=false;
 				$('.nav').hide();
 				$('#navbar').height("6.5em");
-				$('#menubutton').html('Menu');
-				$('#menubutton').addClass('contentlinks');
+				// $('#menubutton').html('Menu');
+				// $('#menubutton').addClass('contentlinks');
 			}
 		}
 
