--- a/projects/artbinder-personas/index.html
+++ b/projects/artbinder-personas/index.html
@@ -164,6 +164,12 @@ https://s3-us-west-2.amazonaws.com/wip-bucket/github/ArtBinder/archivist.jpg">
 https://s3-us-west-2.amazonaws.com/wip-bucket/github/ArtBinder/small-collector.jpg">
 <img src="
 https://s3-us-west-2.amazonaws.com/wip-bucket/github/ArtBinder/artist.jpg">
+<p>By analyzing the user research, I developed workflows of the various personas, both in daily use as well as in art fair usage, which accounts for up to 60% of their total sales.</p>
+<img src="
+https://s3-us-west-2.amazonaws.com/wip-bucket/github/ArtBinder/persona-user-flows.jpg">
+<p>Finally, I indetified the customer journey, listing the ways marketing, sales and client success work together to recruit customers and how they are able to differentiate themselves in the marketplace.</p>
+<img src="
+https://s3-us-west-2.amazonaws.com/wip-bucket/github/ArtBinder/ab-customer-journey.jpg">
 </div>
 
 <script type="text/javascript">
