--- a/projects/artbinder-personas/index.html
+++ b/projects/artbinder-personas/index.html
@@ -139,7 +139,7 @@
       </div>
 <div class="img-container">
 <h3>ArtBinder Personas</h3>
-<p>At ArtBinder, we had a range of applications that ranged from consumer facing to enterprise B2B solutions that all utilized their own independent systems. The project I was tasked with was identifying, interviewing and synthesizing all the key users for this range of applications in preparation of the launch of the new version of their CRM, one that uses the same backend system across all products.</p>
+<p>At ArtBinder, we had a range of applications that ranged from consumer facing to enterprise B2B solutions that all utilized their own independent systems. The project I was tasked with was identifying, interviewing and synthesizing all the key users for this range of applications in preparation of the launch of the new version of their IMS, one that uses the same backend system across all products.</p>
 
 <p>Working with the sales and customer success teams as well as users, I found that the user that actually makes the financial decision to purchase the product is not the user that actively uses the products on their day-to-day workflow. With that information I developed a tiered system for the Personas.</p>
 <ul>
