--- a/index.html
+++ b/index.html
@@ -232,11 +232,12 @@
 		<h3>Projects &nbsp;<span id="gists"><a class="contentlinks" href="http://bl.ocks.org/AGdelaX">Check out my gists!</a></span></h3>
 
 		<p><a class="contentlinks" href="http://playarithmatic.com">Arithmatic</a>&mdash;An educational mobile game for iPhone, players must solve arithmetic questions as quickly as possible and compete in leaderboards.</p>
-		<p><a class="contentlinks" href="http://albertogui.com/projects/artbinder-personas/">ArtBinder Personas</a>&mdash;Persona development and user research for the large range of ArtBinder's customers and products.</p>
-		<p><a class="contentlinks" href="http://albertogui.com/projects/alice-crm/">Alice Concierge CRM</a>&mdash;A CRM for hotel concierge as a part of Alice's backend hotel management solution.</p>
-		<p><a class="contentlinks" href="http://albertogui.com/projects/divpixels/">divPixels</a>&mdash;A free to use, browser-based pixel art tool for quickly developing pixel drawings.</p>
-		<p><a class="contentlinks" href="http://albertogui.com/projects/whitewithred/">White with Red</a>&mdash;A series of illustrations and web animations based on the short horror story of the same name.</p>
-		<p><a class="contentlinks" href="http://albertogui.com/projects/arroz-blanco/">Arroz Blanco</a>&mdash;A t-shirt and sticker line I developed and sold in Puerto Rico Comic Con. The brand is a blend of otaku and Puerto Rican culture.</p>
+		<p><a class="contentlinks" href="/projects/artbinder-personas/">ArtBinder Personas</a>&mdash;Persona development and user research for the large range of ArtBinder's customers and products.</p>
+		<p><a class="contentlinks" href="/projects/alice-crm/">Alice Concierge CRM</a>&mdash;A CRM for hotel concierge as a part of Alice's backend hotel management solution.</p>
+		<p><a class="contentlinks" href="/projects/divpixels/">divPixels</a>&mdash;A free to use, browser-based pixel art tool for quickly developing pixel drawings.</p>
+		<p><a class="contentlinks" href="/projects/whitewithred/">White with Red</a>&mdash;A series of illustrations and web animations based on the short horror story of the same name.</p>
+		<p><a class="contentlinks" href="/projects/koloni">Koloni</a>&mdash;Branding and UI design for a concept microfinance app.</p>
+		<p><a class="contentlinks" href="/projects/arroz-blanco/">Arroz Blanco</a>&mdash;A t-shirt and sticker line I developed and sold in Puerto Rico Comic Con. The brand is a blend of otaku and Puerto Rican culture.</p>
 	</div>
 
 	<script type="text/javascript">
