--- a/projects/koloni/index.html
+++ b/projects/koloni/index.html
@@ -100,8 +100,8 @@
   h3{
     font-weight: 400;
   }
-  img{
-    max-width: 400px;
+  .cell-img{
+    max-width: 300px;
   }
 
   @media (max-width: 700px){
@@ -126,19 +126,19 @@
 <h3>Koloni</h3>
 <p>In one of my fall semester classes, I developed the identity for a fictional microfinance app called Koloni. I chose the name after discovering the word ‘colony’ is spelled and pronounced very similarly in over thirty different languages, with ‘koloni’ being the most common form of spelling. The app would function very similarly to Kickstarter, although users receiving money can then set up a payment plan to reimburse lenders.</p>
 <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/koloni/koloni-logo.png">
-<img src="
+<img class="cell-img" src="
 https://s3-us-west-2.amazonaws.com/wip-bucket/github/koloni/koloni-home.png" style="padding: 20px; margin: 0;">
-<img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/koloni/koloni-password.png" style="padding: 20px; margin: 0;">
-<img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/koloni/koloni-signup.png" style="padding: 20px; margin: 0;">
-<img src="
+<img class="cell-img" src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/koloni/koloni-password.png" style="padding: 20px; margin: 0;">
+<img class="cell-img" src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/koloni/koloni-signup.png" style="padding: 20px; margin: 0;">
+<img class="cell-img" src="
 https://s3-us-west-2.amazonaws.com/wip-bucket/github/koloni/koloni-main.png" style="padding: 20px; margin: 0;">
-<img src="
+<img class="cell-img" src="
 https://s3-us-west-2.amazonaws.com/wip-bucket/github/koloni/koloni-main2.png" style="padding: 20px; margin: 0;">
-<img src="
+<img class="cell-img" src="
 https://s3-us-west-2.amazonaws.com/wip-bucket/github/koloni/koloni-project.png" style="padding: 20px; margin: 0;">
-<img src="
+<img class="cell-img" src="
 https://s3-us-west-2.amazonaws.com/wip-bucket/github/koloni/koloni-project2.png" style="padding: 20px; margin: 0;">
-<img src="
+<img class="cell-img" src="
 https://s3-us-west-2.amazonaws.com/wip-bucket/github/koloni/koloni-make.png" style="padding: 20px; margin: 0;">
 <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/koloni/koloni-posters.png">
 <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/koloni/koloni-billboard.png">
