--- a/projects/koloni/index.html
+++ b/projects/koloni/index.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <head>
-<title>Alice Concierge CRM</title>
+<title>Koloni</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="https://s3-us-west-2.amazonaws.com/wip-bucket/github/favicon.ico" />
   <link href='https://fonts.googleapis.com/css?family=Roboto+Slab' rel='stylesheet' type='text/css'>
