--- a/projects/koloni/index.html
+++ b/projects/koloni/index.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <head>
-<title>Koloni</title>
+<title>Arroz Blanco</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="https://s3-us-west-2.amazonaws.com/wip-bucket/github/favicon.ico" />
   <link href='https://fonts.googleapis.com/css?family=Roboto+Slab' rel='stylesheet' type='text/css'>
@@ -30,6 +30,10 @@
       padding: 0 15px 30px 15px;
       line-height: 1.7em;
       top: 6em;
+    }
+    img{
+      max-width: 500px;
+      margin:auto;
     }
 
     a{
@@ -97,12 +101,7 @@
   h3{
     font-weight: 400;
   }
-  .cell-img{
-    max-width: 250px;
-  }
-  #logo{
-    max-width: 400px;
-  }
+
   @media (max-width: 700px){
     #menubutton{
       display: inline-block;
@@ -121,8 +120,7 @@
   </style>
 </head>
 <body>
-<div class="img-container">
-<div id="navbar"></div>
+      <div id="navbar"></div>
       <a href="http://albertogui.com"><img id= "facedown" src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/face.svg"></a>
       <div id="linksdown">
         <p id="menubutton"><a class="contentlinks">Menu</a></p>
@@ -140,6 +138,7 @@
         <p class="nav"><a class ="contentlinks" href="mailto:agdelax@gmail.com">Email</a></li>
         </div>
       </div>
+<div class="img-container">
 <h3>Koloni</h3>
 <p>In one of my fall semester classes, I developed the identity for a fictional microfinance app called Koloni. I chose the name after discovering the word ‘colony’ is spelled and pronounced very similarly in over thirty different languages, with ‘koloni’ being the most common form of spelling. The app would function very similarly to Kickstarter, although users receiving money can then set up a payment plan to reimburse lenders.</p>
 <img id="logo" src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/koloni/koloni-logo.png">
