--- a/projects/koloni/index.html
+++ b/projects/koloni/index.html
@@ -35,10 +35,6 @@
       width: 100%;
     }
 
-    .cell-images{
-      max-width: 250px;
-    }
-
     #logo{
       max-width: 500px;
     }
@@ -151,19 +147,19 @@
 <img id="logo" src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/koloni/koloni-logo.png">
 <br/>
 <img src="
-https://s3-us-west-2.amazonaws.com/wip-bucket/github/koloni/koloni-home.png" class="cell-images" style="padding: 20px; margin: 0;">
-<img class="cell-img" src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/koloni/koloni-password.png" class="cell-images" style="padding: 20px; margin: 0;">
-<img class="cell-img" src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/koloni/koloni-signup.png" class="cell-images" style="padding: 20px; margin: 0;">
+https://s3-us-west-2.amazonaws.com/wip-bucket/github/koloni/koloni-home.png" style="padding: 20px; margin: 0; max-width: 250px;">
+<img class="cell-img" src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/koloni/koloni-password.png" style="padding: 20px; margin: 0; max-width: 250px;">
+<img class="cell-img" src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/koloni/koloni-signup.png" style="padding: 20px; margin: 0; max-width: 250px;">
 <img src="
-https://s3-us-west-2.amazonaws.com/wip-bucket/github/koloni/koloni-main.png" class="cell-images" style="padding: 20px; margin: 0;">
+https://s3-us-west-2.amazonaws.com/wip-bucket/github/koloni/koloni-main.png" style="padding: 20px; margin: 0; max-width: 250px;">
 <img src="
-https://s3-us-west-2.amazonaws.com/wip-bucket/github/koloni/koloni-main2.png" class="cell-images" style="padding: 20px; margin: 0;">
+https://s3-us-west-2.amazonaws.com/wip-bucket/github/koloni/koloni-main2.png" style="padding: 20px; margin: 0; max-width: 250px;">
 <img src="
-https://s3-us-west-2.amazonaws.com/wip-bucket/github/koloni/koloni-project.png" class="cell-images" style="padding: 20px; margin: 0;">
+https://s3-us-west-2.amazonaws.com/wip-bucket/github/koloni/koloni-project.png" style="padding: 20px; margin: 0; max-width: 250px;">
 <img src="
-https://s3-us-west-2.amazonaws.com/wip-bucket/github/koloni/koloni-project2.png" class="cell-images" style="padding: 20px; margin: 0;">
+https://s3-us-west-2.amazonaws.com/wip-bucket/github/koloni/koloni-project2.png" style="padding: 20px; margin: 0; max-width: 250px;">
 <img src="
-https://s3-us-west-2.amazonaws.com/wip-bucket/github/koloni/koloni-make.png" class="cell-images" style="padding: 20px; margin: 0;">
+https://s3-us-west-2.amazonaws.com/wip-bucket/github/koloni/koloni-make.png" style="padding: 20px; margin: 0; max-width: 250px;">
 <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/koloni/koloni-posters.png">
 <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/koloni/koloni-billboard.png">
 <img src="
