--- a/index.html
+++ b/index.html
@@ -250,8 +250,8 @@
 		<img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/white-with-red.gif" class="image-responsive">
 		<p><a class="contentlinks" href="/projects/whitewithred/">White with Red</a>&mdash;A series of illustrations and web animations based on the short horror story of the same name.</p>
 
-		<img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/koloni.gif" class="image-responsive">
-		<p><a class="contentlinks" href="/projects/koloni">Koloni</a>&mdash;Branding and UI design for a concept microfinance app.</p>
+		<!-- <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/koloni.gif" class="image-responsive">
+		<p><a class="contentlinks" href="/projects/koloni">Koloni</a>&mdash;Branding and UI design for a concept microfinance app.</p> -->
 
 		<img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/arroz-blanco.gif" class="image-responsive">
 		<p><a class="contentlinks" href="/projects/arroz-blanco/">Arroz Blanco</a>&mdash;A t-shirt and sticker line I developed and sold in Puerto Rico Comic Con. The brand is a blend of otaku and Puerto Rican culture.</p>
