--- a/projects/alice-crm/index.html
+++ b/projects/alice-crm/index.html
@@ -139,7 +139,7 @@
       </div>
 <div class="img-container">
 <h3>Alice Concierge CRM</h3>
-<p>At Alice I was in charge of leading the design for the development of a concierge CRM system for managing contacts and making recommendations to hotel guests on nearby vendors. We wanted to develop a system where concierge can quickly make recommendations to hotel guests by searching through their notes and database on nearby vendors and being able to easily export the vendor data as a PDF.</p>
+<p>At Alice I was placed in charge of leading the design for the development of a concierge CRM system for managing contacts and making recommendations to hotel guests on nearby vendors. We wanted to develop a system where concierge can quickly make recommendations to hotel guests by searching through their notes and database on nearby vendors and being able to easily export the vendor data as a PDF.</p>
 
 <p>After doing a competitive analysis of similar CRM systems (Yelp, TripAdvisor, OpenTable, etc.) we concluded that the most efficient way to display the data was a bisected screen, one side showing the list of available vendors and the other side showing the selected vendor profile. This way concierge can be able to look at a vendor in closer detail and still keep track of other options in the area without having to switch in and out of multiple web pages.</p>
 <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/alice-crm/vendor-crm-main.png" style="border: 1px solid #d3d3d3">
