--- a/projects/alice-crm/index.html
+++ b/projects/alice-crm/index.html
@@ -57,7 +57,7 @@
 
     #linksdown{
     position: fixed;
-    top: 0.5em;
+    top: 0;
     right: 1em;
     font-size: 1.5em;
     z-index: 22;
@@ -66,7 +66,7 @@
     }
 
     #navbar{
-    height: 6.5em;
+    height: 4.5em;
     position: fixed;
     top: 0;
     left: 0;
@@ -79,7 +79,7 @@
     top: 1em;
     left: 1.3em;
     position: fixed;
-    max-width: 3em;
+    max-width: 2em;
     z-index: 21;
     }
 
