--- a/index.html
+++ b/index.html
@@ -235,25 +235,25 @@
 
 		<h3>Case Studies &nbsp;<span id="gists"><a class="contentlinks" href="http://bl.ocks.org/AGdelaX">Check out my gists!</a></span></h3>
 
-		<img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/arithmatic.gif" class="image-responsive">
+		<!-- <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/arithmatic.gif" class="image-responsive"> -->
 		<p><a class="contentlinks" href="http://playarithmatic.com">Arithmatic</a>&mdash;An educational mobile game for iPhone, players must solve arithmetic questions as quickly as possible and compete in leaderboards.</p>
 
-		<img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/artbinder.gif" class="image-responsive">
+		<!-- <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/artbinder.gif" class="image-responsive"> -->
 		<p><a class="contentlinks" href="/projects/artbinder-personas/">ArtBinder Personas</a>&mdash;Persona development and user research for the large range of ArtBinder's customers and products.</p>
 
-		<img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/alice-crm.gif" class="image-responsive">
+		<!-- <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/alice-crm.gif" class="image-responsive"> -->
 		<p><a class="contentlinks" href="/projects/alice-crm/">Alice Concierge CRM</a>&mdash;A CRM for hotel concierge as a part of Alice's backend hotel management solution.</p>
 
-		<img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/divpixels.gif" class="image-responsive">
+		<!-- <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/divpixels.gif" class="image-responsive"> -->
 		<p><a class="contentlinks" href="/projects/divpixels/">divPixels</a>&mdash;A free to use, browser-based pixel art tool for quickly developing pixel drawings.</p>
 
-		<img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/white-with-red.gif" class="image-responsive">
+		<!-- <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/white-with-red.gif" class="image-responsive"> -->
 		<p><a class="contentlinks" href="/projects/whitewithred/">White with Red</a>&mdash;A series of illustrations and web animations based on the short horror story of the same name.</p>
 
 		<!-- <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/koloni.gif" class="image-responsive">
 		<p><a class="contentlinks" href="/projects/koloni">Koloni</a>&mdash;Branding and UI design for a concept microfinance app.</p> -->
 
-		<img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/arroz-blanco.gif" class="image-responsive">
+		<!-- <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/arroz-blanco.gif" class="image-responsive"> -->
 		<p><a class="contentlinks" href="/projects/arroz-blanco/">Arroz Blanco</a>&mdash;A t-shirt and sticker line I developed and sold in Puerto Rico Comic Con. The brand is a blend of otaku and Puerto Rican culture.</p>
 	</div>
 
