--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
     top:105%; 
     max-width: 750px;
     margin: auto;
-    font-size: 1.5em;
+    font-size: 1em;
     padding: 0 15px 30px 15px;
-    line-height: 1.7em;
+    line-height: 1.2em;
 	}
 
 	#name{
@@ -236,15 +236,14 @@
 		<h3>Case Studies &nbsp;<span id="gists"><a class="contentlinks" href="http://bl.ocks.org/AGdelaX">Check out my gists!</a></span></h3>
 
 		<!-- <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/arithmatic.gif" class="image-responsive"> -->
-		<ul>
-		<li><a class="contentlinks" href="http://playarithmatic.com">Arithmatic</a>&mdash;An educational mobile game for iPhone, players must solve arithmetic questions as quickly as possible and compete in leaderboards.</li>
+		<p><a class="contentlinks" href="http://playarithmatic.com">Arithmatic</a>&mdash;An educational mobile game for iPhone, players must solve arithmetic questions as quickly as possible and compete in leaderboards.</p>
 
 		<!-- <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/artbinder.gif" class="image-responsive"> -->
-		<li><a class="contentlinks" href="/projects/artbinder-personas/">ArtBinder Personas</a>&mdash;Persona development and user research for the large range of ArtBinder's customers and products.</li>
+		<p><a class="contentlinks" href="/projects/artbinder-personas/">ArtBinder Personas</a>&mdash;Persona development and user research for the large range of ArtBinder's customers and products.</p>
 
 		<!-- <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/alice-crm.gif" class="image-responsive"> -->
-		<li><a class="contentlinks" href="/projects/alice-crm/">Alice Concierge CRM</a>&mdash;A CRM for hotel concierge as a part of Alice's backend hotel management solution.</li>
-		</ul>
+		<p><a class="contentlinks" href="/projects/alice-crm/">Alice Concierge CRM</a>&mdash;A CRM for hotel concierge as a part of Alice's backend hotel management solution.</p>
+
 		<!-- <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/divpixels.gif" class="image-responsive"> -->
 		<p><a class="contentlinks" href="/projects/divpixels/">divPixels</a>&mdash;A free to use, browser-based pixel art tool for quickly developing pixel drawings.</p>
 
