--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
 		<p><a class="contentlinks" href="/projects/artbinder-personas/">ArtBinder Personas</a>&mdash;Persona development and user research for the large range of ArtBinder's customers and products.</p>
 
 		<!-- <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/alice-crm.gif" class="image-responsive"> -->
-		<p><a class="contentlinks" href="/projects/alice-crm/">Alice Concierge CRM</a>&mdash;A customer relationship management system for hotel concierge as a part of Alice's backend hotel management solution.</p>
+		<p><a class="contentlinks" href="/projects/alice-crm/">Alice Concierge CRM</a>&mdash;A customer relationship management system designed for hotel concierge as a part of Alice's backend hotel management solution.</p>
 
 		<h3>Coded Work &nbsp;<span id="gists"><a class="contentlinks" href="http://bl.ocks.org/AGdelaX">Check out my gists!</a></span></h3>
 
