--- a/index.html
+++ b/index.html
@@ -256,7 +256,8 @@
 		<p><a class="contentlinks" href="/projects/koloni">Koloni</a>&mdash;Branding and UI design for a concept microfinance app.</p> -->
 
 		<h3>Printed Work</h3>
-
+		<p><a class="contentlinks" href="/projects/american-classics/">An Anthology of American Classics</a>&mdash;Four works of classic American literature designed and bound into one volume.</p>
+		<p><a class="contentlinks" href="/projects/uss-maine/">USS Maine Memorial Booklet</a>&mdash;A booklet examining the history of the USS Maine and the monument built to commemorate it. Its destruction sparked the beginning of the Spanish-American War, as well as the birth of 'yellow journalism.'</p>
 		<!-- <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/arroz-blanco.gif" class="image-responsive"> -->
 		<p><a class="contentlinks" href="/projects/arroz-blanco/">Arroz Blanco</a>&mdash;A t-shirt and sticker line I developed and sold in Puerto Rico Comic Con. The brand is a blend of otaku and Puerto Rican culture.</p>
 	</div>
