--- a/projects/arithmatic/index.html
+++ b/projects/arithmatic/index.html
@@ -166,7 +166,7 @@ https://s3-us-west-2.amazonaws.com/wip-bucket/github/arithmatic/new-screens/stat
 <p>Wanting the feel of this game to be ‘just right’ I built a simple prototype version for web browsers using jQuery UI. The prototype was meant solely to plot the user interactions and really nail the look of the animations in game. Afterwards I handed it off to an iOS developer to have it built into a working iOS title available on the app store.</p>
 <img src="
 https://s3-us-west-2.amazonaws.com/wip-bucket/github/arithmatic/new-screens/arithmatic-motion.gif" style="max-width: 350px;">
-<p>Be sure to check out the game <a href="https://itunes.apple.com/us/app/arithmatic/id1097565159?mt=8">here</a>.</p>
+<p>Be sure to check out the game <a class ="contentlinks" href="https://itunes.apple.com/us/app/arithmatic/id1097565159?mt=8">here</a>.</p>
 </div>
 
 <script type="text/javascript">
